0.9.0

- Fix combopoint position under target if target is casting
- Added ability to seperate MultiBarLeft and MultiBarRight
- Fixed an error in Immersive Questing
- Fixed an error where the MultiBarLeft and MultiBarRight change the size if you attack from stealth

0.8.0

- Added ability to hook combopoints to the traget frame
- Added back Immersive Questing
- Added back Questtracker
- Added all tracking icons
- Fix some bugs

0.7.0

- Added SharedMedia (Font, Background, Statusbar)
- Fix some lua error
- Added more custom tracking icons
- Update libs
- Fix castingbar not safe position one some points on screen
- Update mana and energy regen animation
- Hook combopoints to unitframe option

0.6.0

- Added custom tacking icons (if some is missing please tell us the ID and type)
- Make tooltip moveable
- Small fixes
- If petbar is locked, the bar is now moving up and down with the left multibar if this one is fading in and out
- The buffbar is now moving up and down with the right multibar if this one is fading in and out
- Added custom hunter happiness texture (portrait frame background)
- Fix MultiBarRight and MultiBarLeft was not scale after reload
- Added custom border to stancebutton and make them smaller
- Added itemquality border to bags and bank

0.5.0

- Fix druid combobar (Cat)
- Added target castbars (Blizzard removed the ability to distinguish between spell ranks in the combat log, so cast times are always based on the highest rank; No ability to detect if a cast was canceled, so the castbar runs to the end)

0.4.0

- Added AuraDurationClassic
- Added bank frame
- Petframe can now be moved
- Pet happiness now only visible for hunters
- Fix some lua errors
- Fix some bugs in raidframes
- Added combopoints for druids
- If a class has only one Stanceicon, it will be showen instead of the "Sweap-Button"
- Added temp weapon enchants as buff