@@ -4,6 +4,11 @@
 - Added ability to seperate MultiBarLeft and MultiBarRight
 - Fixed an error in Immersive Questing
 - Fixed an error where the MultiBarLeft and MultiBarRight change the size if you attack from stealth
+- Support QuestGuru
+- Change QuestTracker click actions:    RClick to close quest log if open
+                                        Shift + LClick to link quest name in currently open chat
+                                        Shift + RClick to link quest objects and progress in currently open chat
+                                        Ctrl + Click to untrack the quest
 
 0.8.0
 
